--- a/examples/recommender-system.ipynb
+++ b/examples/recommender-system.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data manipulation\n",
     "import numpy as np\n",
@@ -63,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +162,7 @@
        "9        1      919       4"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -245,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -276,7 +267,7 @@
       "Epoch  20 / 20  -  train_rmse: 0.8984486630733863\n",
       "\n",
       "Test RMSE: 0.9122\n",
-      "Wall time: 1.36 s\n"
+      "Wall time: 2.12 s\n"
      ]
     }
    ],
@@ -294,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +393,7 @@
        "94        200     1148     4.632405"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -451,7 +442,7 @@
       "Epoch  20 / 20  -  train_rmse: 0.8961303483924202\n",
       "\n",
       "Test RMSE: 0.9101\n",
-      "Wall time: 1.17 s\n"
+      "Wall time: 1.35 s\n"
      ]
     }
    ],
@@ -476,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -513,7 +504,7 @@
        "BaselineModel(n_epochs=20, reg=0.05)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -556,7 +547,7 @@
       "Epoch  20 / 20  -  train_rmse: 0.9137774700652217\n",
       "\n",
       "Test RMSE: 0.9215\n",
-      "Wall time: 565 ms\n"
+      "Wall time: 539 ms\n"
      ]
     }
    ],
@@ -585,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +605,7 @@
       "Epoch  20 / 20  -  train_rmse: 0.8736786543849769\n",
       "\n",
       "Test RMSE: 0.9177\n",
-      "Wall time: 10.7 s\n"
+      "Wall time: 17 s\n"
      ]
     }
    ],
@@ -638,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +737,7 @@
        "229       200      318     4.631874"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -775,47 +766,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  1 / 20  -  train_rmse: 1.0135035876891456\n",
-      "Epoch  2 / 20  -  train_rmse: 0.9809740785197367\n",
-      "Epoch  3 / 20  -  train_rmse: 0.9649228089168406\n",
-      "Epoch  4 / 20  -  train_rmse: 0.9553707322966503\n",
-      "Epoch  5 / 20  -  train_rmse: 0.9490455957336519\n",
-      "Epoch  6 / 20  -  train_rmse: 0.9445564946834154\n",
-      "Epoch  7 / 20  -  train_rmse: 0.9412121168092288\n",
-      "Epoch  8 / 20  -  train_rmse: 0.9386299075321686\n",
-      "Epoch  9 / 20  -  train_rmse: 0.9365808314209314\n",
-      "Epoch  10 / 20  -  train_rmse: 0.9349192673831751\n",
-      "Epoch  11 / 20  -  train_rmse: 0.9335481356407674\n",
-      "Epoch  12 / 20  -  train_rmse: 0.9324001889682135\n",
-      "Epoch  13 / 20  -  train_rmse: 0.9314273491665346\n",
-      "Epoch  14 / 20  -  train_rmse: 0.93059431981489\n",
-      "Epoch  15 / 20  -  train_rmse: 0.9298745983218687\n",
-      "Epoch  16 / 20  -  train_rmse: 0.9292478966099676\n",
-      "Epoch  17 / 20  -  train_rmse: 0.928698421405458\n",
-      "Epoch  18 / 20  -  train_rmse: 0.928213696917599\n",
-      "Epoch  19 / 20  -  train_rmse: 0.9277837398929126\n",
-      "Epoch  20 / 20  -  train_rmse: 0.9274004695728827\n"
+      "Epoch  1 / 20  -  train_rmse: 1.0568610899535198\n",
+      "Epoch  2 / 20  -  train_rmse: 0.9781091388392953\n",
+      "Epoch  3 / 20  -  train_rmse: 0.9429025413735869\n",
+      "Epoch  4 / 20  -  train_rmse: 0.926466677767547\n",
+      "Epoch  5 / 20  -  train_rmse: 0.9187575999414697\n",
+      "Epoch  6 / 20  -  train_rmse: 0.9150129094612953\n",
+      "Epoch  7 / 20  -  train_rmse: 0.9131338912290606\n",
+      "Epoch  8 / 20  -  train_rmse: 0.9121715039702479\n",
+      "Epoch  9 / 20  -  train_rmse: 0.9116745732404521\n",
+      "Epoch  10 / 20  -  train_rmse: 0.911418889611707\n",
+      "Epoch  11 / 20  -  train_rmse: 0.911289048442608\n",
+      "Epoch  12 / 20  -  train_rmse: 0.9112240375586808\n",
+      "Epoch  13 / 20  -  train_rmse: 0.9111910006598881\n",
+      "Epoch  14 / 20  -  train_rmse: 0.9111720883027641\n",
+      "Epoch  15 / 20  -  train_rmse: 0.9111576447321493\n",
+      "Epoch  16 / 20  -  train_rmse: 0.9111425728282068\n",
+      "Epoch  17 / 20  -  train_rmse: 0.9111243439852966\n",
+      "Epoch  18 / 20  -  train_rmse: 0.9111018837050248\n",
+      "Epoch  19 / 20  -  train_rmse: 0.9110749354880822\n",
+      "Epoch  20 / 20  -  train_rmse: 0.9110436921486067\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "MatrixFactorization(lr=0.001, n_epochs=20, reg=0.5)"
+       "MatrixFactorization(gamma=0.01, kernel='rbf', lr=0.5, n_epochs=20, reg=0.005)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "matrix_fact = MatrixFactorization(n_epochs = 20, n_factors = 100, verbose = 1, lr = 0.001, reg = 0.5)\n",
+    "# matrix_fact = MatrixFactorization(n_epochs = 20, kernel = 'rbf', n_factors = 100, verbose = 1, lr = 0.001, reg = 0.5)\n",
+    "matrix_fact = MatrixFactorization(n_epochs = 20, n_factors = 100, verbose = 1, lr = 0.5, reg = 0.005, kernel='rbf')\n",
     "matrix_fact.fit(train_initial)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -824,29 +816,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  1 / 20  -  train_rmse: 0.9868934780138371\n",
-      "Epoch  2 / 20  -  train_rmse: 0.9746756844339688\n",
-      "Epoch  3 / 20  -  train_rmse: 0.967124825241439\n",
-      "Epoch  4 / 20  -  train_rmse: 0.9620029432402933\n",
-      "Epoch  5 / 20  -  train_rmse: 0.95830229788077\n",
-      "Epoch  6 / 20  -  train_rmse: 0.9555034926549782\n",
-      "Epoch  7 / 20  -  train_rmse: 0.9533124379973743\n",
-      "Epoch  8 / 20  -  train_rmse: 0.9515503985874932\n",
-      "Epoch  9 / 20  -  train_rmse: 0.9501025102941343\n",
-      "Epoch  10 / 20  -  train_rmse: 0.9488915734152583\n",
-      "Epoch  11 / 20  -  train_rmse: 0.9478637796108955\n",
-      "Epoch  12 / 20  -  train_rmse: 0.9469804816660189\n",
-      "Epoch  13 / 20  -  train_rmse: 0.9462132125518454\n",
-      "Epoch  14 / 20  -  train_rmse: 0.945540545886001\n",
-      "Epoch  15 / 20  -  train_rmse: 0.9449460484418565\n",
-      "Epoch  16 / 20  -  train_rmse: 0.944416905890284\n",
-      "Epoch  17 / 20  -  train_rmse: 0.9439429774225195\n",
-      "Epoch  18 / 20  -  train_rmse: 0.9435161313154408\n",
-      "Epoch  19 / 20  -  train_rmse: 0.9431297689964167\n",
-      "Epoch  20 / 20  -  train_rmse: 0.9427784782614579\n",
+      "Epoch  1 / 20  -  train_rmse: 1.0119572386648612\n",
+      "Epoch  2 / 20  -  train_rmse: 0.9654911833226616\n",
+      "Epoch  3 / 20  -  train_rmse: 0.9484999592886597\n",
+      "Epoch  4 / 20  -  train_rmse: 0.9398415276904925\n",
+      "Epoch  5 / 20  -  train_rmse: 0.9347056320743945\n",
+      "Epoch  6 / 20  -  train_rmse: 0.9313874481586881\n",
+      "Epoch  7 / 20  -  train_rmse: 0.9291214126947662\n",
+      "Epoch  8 / 20  -  train_rmse: 0.9275107388390131\n",
+      "Epoch  9 / 20  -  train_rmse: 0.9263297441589416\n",
+      "Epoch  10 / 20  -  train_rmse: 0.925441414717506\n",
+      "Epoch  11 / 20  -  train_rmse: 0.9247584207037933\n",
+      "Epoch  12 / 20  -  train_rmse: 0.924222974314968\n",
+      "Epoch  13 / 20  -  train_rmse: 0.9237956942759937\n",
+      "Epoch  14 / 20  -  train_rmse: 0.9234491018299616\n",
+      "Epoch  15 / 20  -  train_rmse: 0.923163645988194\n",
+      "Epoch  16 / 20  -  train_rmse: 0.9229251831565568\n",
+      "Epoch  17 / 20  -  train_rmse: 0.9227233306625443\n",
+      "Epoch  18 / 20  -  train_rmse: 0.9225503649866644\n",
+      "Epoch  19 / 20  -  train_rmse: 0.9224004698361524\n",
+      "Epoch  20 / 20  -  train_rmse: 0.9222692144472568\n",
       "\n",
-      "Test RMSE: 0.9495\n",
-      "Wall time: 1.7 s\n"
+      "Test RMSE: 0.9364\n",
+      "Wall time: 3.19 s\n"
      ]
     }
    ],
@@ -854,7 +846,7 @@
     "%%time\n",
     "\n",
     "# Update model with new users\n",
-    "matrix_fact.update_users(train_update, lr=0.001, n_epochs=20, verbose=1)\n",
+    "matrix_fact.update_users(train_update, lr=0.5, n_epochs=20, verbose=1)\n",
     "pred = matrix_fact.predict(test_update)\n",
     "rmse = mean_squared_error(test_update['rating'], pred, squared = False)\n",
     "\n",
@@ -870,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +891,7 @@
       "Epoch  20 / 20  -  train_rmse: 0.8910505137982465\n",
       "\n",
       "Test RMSE: 0.9416\n",
-      "Wall time: 8.86 s\n"
+      "Wall time: 10.3 s\n"
      ]
     }
    ],
@@ -923,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -951,8 +943,8 @@
       "Epoch  19 / 20  -  train_rmse: 0.9094532230504574\n",
       "Epoch  20 / 20  -  train_rmse: 0.9094805203330077\n",
       "\n",
-      "Test RMSE: 0.9276\n",
-      "Wall time: 16.5 s\n"
+      "Test RMSE: 0.9278\n",
+      "Wall time: 18.8 s\n"
      ]
     }
    ],
